apps/base/media/dizquetv/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dizquetv-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`dizquetv.${CLUSTER_DOMAIN}`)
      services:
        - name: dizquetv
          port: 8000
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        # - name: traefik-forward-auth
        #   namespace: kube-system
  tls:
    certResolver: cloudflare
